@@ -1,1 +1,7 @@
-?package(gwaei):needs="x11" section="Applications/Education" title="gwaei" command="gwaei"
+?package(gwaei):needs="x11" \
+	section="Applications/Text" \
+	title="gWaei Japanese-English Dictionary" \
+	icon="/usr/share/pixmaps/gwaei.xpm" \
+	icon16x16="/usr/share/pixmaps/gwaei_16x16.xpm" \
+	icon32x32="/usr/share/pixmaps/gwaei_32x32.xpm" \
+	command="gwaei"
