@@ -1,8 +1,11 @@
 gwaei (1.4.1-2) unstable; urgency=low
 
   * add menu file for gwaei (Closes: #589305)
+    - convert png icons to xpm, for that add imagemagick to build-deps
+    - add debian/menu file, putting it into Applications/Text category
+    - install the xpm files (16x16, 24x24, 32x32) into /u/s/pixmaps
 
- -- Norbert Preining <preining@debian.org>  Tue, 20 Jul 2010 16:06:01 +0900
+ -- Norbert Preining <preining@debian.org>  Tue, 20 Jul 2010 16:40:00 +0900
 
 gwaei (1.4.1-1) unstable; urgency=low
 
